inst/framework7-5.3.0/grid-extra.css
div[class*="col"] {
  /*background: #fff;*/
  text-align: center;
  /*border: 1px; solid #ddd;*/
  padding: 5px;
  font-size: 12px;
}

.grid-resizable-demo .demo-col-center-content {
  display: flex;
  align-items: center;
  justify-content: center;
}

.grid-resizable-demo div[class*="col"] {
  margin-bottom: 0;
}

.grid-resizable-demo {
  --f7-grid-row-gap: 16px;
}

